# xueersi-idf

./: .gitignore  CMakeLists.txt  README.md  go.py  sdkconfig.defaults  小喵掌机硬件与底层协议.md
GD32_firmware/Firmware/GD32F3x0_standard_peripheral/Include/: gd32f3x0_adc.h  gd32f3x0_cec.h  gd32f3x0_cmp.h  gd32f3x0_crc.h  gd32f3x0_ctc.h  gd32f3x0_dac.h  gd32f3x0_dbg.h  gd32f3x0_dma.h  gd32f3x0_exti.h  gd32f3x0_fmc.h  gd32f3x0_fwdgt.h  gd32f3x0_gpio.h  gd32f3x0_i2c.h  gd32f3x0_misc.h  gd32f3x0_pmu.h  gd32f3x0_rcu.h  gd32f3x0_rtc.h  gd32f3x0_spi.h  gd32f3x0_syscfg.h  gd32f3x0_timer.h  gd32f3x0_tsi.h  gd32f3x0_usart.h  gd32f3x0_wwdgt.h
GD32_firmware/Firmware/GD32F3x0_standard_peripheral/Source/: gd32f3x0_adc.c  gd32f3x0_cec.c  gd32f3x0_cmp.c  gd32f3x0_crc.c  gd32f3x0_ctc.c  gd32f3x0_dac.c  gd32f3x0_dbg.c  gd32f3x0_dma.c  gd32f3x0_exti.c  gd32f3x0_fmc.c  gd32f3x0_fwdgt.c  gd32f3x0_gpio.c  gd32f3x0_i2c.c  gd32f3x0_misc.c  gd32f3x0_pmu.c  gd32f3x0_rcu.c  gd32f3x0_rtc.c  gd32f3x0_spi.c  gd32f3x0_syscfg.c  gd32f3x0_timer.c  gd32f3x0_tsi.c  gd32f3x0_usart.c  gd32f3x0_wwdgt.c
GD32_firmware/Firmware/GD32F3x0_usbfs_library/ustd/common/: usb_ch9_std.h
GD32_firmware/Project/: readme.txt
GD32_firmware/Project/GD32EBuilder_project/: .cproject  .project
GD32_firmware/Project/MDK-ARM/: cdc_acm.uvopt  cdc_acm.uvoptx  cdc_acm.uvprojx
GD32_firmware/Project/inc/: gd32f3x0_it.h  gd32f3x0_libopt.h  usb_conf.h  usbd_conf.h
GD32_firmware/Project/src/: app.c  gd32f3x0_hw.c  gd32f3x0_it.c  system_gd32f3x0.c
GD32_firmware/User/: gd32f350r_eval.c  gd32f350r_eval.h
main/: CMakeLists.txt  main.c
(+89 files in other folders)
